--- a/Backend_SpringBoot/pom.xml
+++ b/Backend_SpringBoot/pom.xml
@@ -91,6 +91,10 @@
 			<artifactId>project_management_system</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
