--- a/Backend_SpringBoot/src/main/resources/application.properties
+++ b/Backend_SpringBoot/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 server.port=8080
+
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=rguigat.anass@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties..mail.smtp.starttls.enable=true
+
